--- a/HalJsonConverter/Hal.Json.csproj
+++ b/HalJsonConverter/Hal.Json.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{4156CE7C-4F7E-46AC-A963-4792E85B9752}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>HalJsonConverter</RootNamespace>
-    <AssemblyName>HalJsonConverter</AssemblyName>
+    <RootNamespace>Hal.Json</RootNamespace>
+    <AssemblyName>Hal.Json</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -50,6 +50,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="HalJsonConverter.nuspec" />
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
